--- a/otto.html
+++ b/otto.html
@@ -2,18 +2,16 @@
 <html lang="en">
 <head>
     <meta charset='UTF-8'/>
-    <title>Hello, CSS</title>
+    <title>OTT Pay</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="playerData.json"></script>  
     
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script type="text/javascript" src="playerData.json"></script>
-    <div></div>
-    <div></div>
     <div class = "container-fluid">
         <nav class="navbar navbar-expand-md">
             <a class="navbar-brand" href="#"><img src="qiuXing/1.png" width="30"  class="img-fluid" /></a>    
@@ -30,12 +28,13 @@
     <img src="qiuXing/1.jpg" style = "margin-top: 2.8em"  class="img-fluid" />
     <div class="square1"></div>
     <div class="square2"></div>
+    <div class="text1">大道方圆</div>
+    <div class="text2">通融未来</div>
 </body>
 
 <footer>
-    <p>Posted by: Hege Refsnes</p>
-    <p>Contact information: <a href="mailto:someone@example.com">
-    someone@example.com</a>.</p>
+    <p>联系我们</p>
+    <p>电子邮件： <a href="mailto:info@ott.ca"></a>info@ott.ca</p>
   </footer>
 
 <style>
@@ -47,6 +46,22 @@
   top: -60px;
   z-index: -3;
   opacity: .058;
+}
+footer {
+    position: fixed;
+    bottom: 0;
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    height:15.5%;
+    text-align: center;
+    font: normal 18px sans-serif;
+    padding: 45px;
+    margin-top: 80px;
+}
+p{
+  color: aliceblue;
 }
     .square1 {
       position: absolute;
@@ -67,6 +82,36 @@
       margin-left:200px;
       opacity: .56;
       z-index: -1;
+    }
+
+    .text1{
+    letter-spacing: 4px;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    margin: 10px 0;
+    font-size: 100px;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    margin-top:200px;
+    margin-left:500px;
+    color: white;
+    }
+
+    .text2{
+    letter-spacing: 4px;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    margin: 10px 0;
+    font-size: 100px;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    margin-top:-75px;
+    margin-left:670px;
+    color: white;
     }
 
     ul {
