--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         </div> -->
   
 
-    <script type="text/javascript">
+    
+</body>
+<script type="text/javascript">
         var data =  [
             {
                 "img":"",
@@ -156,5 +158,9 @@
         
 
     </script>
-</body>
+<style>
+  .navbar {
+    background:#292e29;
+  }
+</style>
 </html>
